@@ -18,7 +18,8 @@ def sort_set(match):
 
 
 u = '[0-9a-fA-F]'
-uuid_re = re.compile(r'%s{8}-%s{4}-%s{4}-%s{4}-%s{12}' % ((u,) * 5))
+uuid_re = re.compile(r'%s{8}(?<!ffffffff)-%s{4}-%s{4}-%s{4}-%s{12}'
+                     % ((u,) * 5))
 set_re = re.compile(r'(\["set",\[(,?\["uuid","<\d+>"\])+\]\])')
 
 
@@ -43,7 +44,20 @@ def filter_uuids(src, dst):
 
 
 if __name__ == '__main__':
-    if len(sys.argv) > 1:
+    if '--help' in sys.argv:
+        print("""\
+uuidfilt, for filtering UUIDs into numbered markers
+usage: %s [INPUT..] > OUTPUT
+    or %s < INPUT > OUTPUT
+
+Reads each INPUT, locates UUIDs in the standard textual form, and
+converts them into numbered markers <0>, <1>, ..., <n>, where <0>
+stands in for each instance of the first unique UUID found, <1> for
+each instance of the second, and so on.
+
+UUIDs that begin with ffffffff are not converted to markers.
+""")
+    elif len(sys.argv) > 1:
         for src in sys.argv[1:]:
             filter_uuids(open(src), sys.stdout)
     else:
